Actions
Bug #12122
closedrcm_daemon: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 8:
../common/rcm_subr.c: In function 'rcmd_db_clean': ../common/rcm_subr.c:1753:29: error: cast between incompatible function types from 'void (*)()' to 'void * (*)(void *)' [-Werror=cast-function-type] if (thr_create(NULL, NULL, (void *(*)(void *))db_clean, ^ cc1: all warnings being treated as errors
Testing done: build/install/boot
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 0e540600911704593d2db2a54688b06c90621822
commit 0e540600911704593d2db2a54688b06c90621822 Author: Toomas Soome <tsoome@me.com> Date: 2019-12-27T17:29:54.000Z 12122 rcm_daemon: cast between incompatible function types Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions